<resources>
    <string name="app_name">Project_Java_5778</string>
    <string name="clients">clients</string>
    <string name="branches">branches</string>
    <string name="carModels">carModels</string>
    <string name="cars">cars</string>


    // Strings for ClientList file:
    <string name="lastName_ClientProperty">Last Name</string>
    <string name="firstName_ClientProperty">First Name</string>
    <string name="phoneNumber_ClientProperty">Phone Number</string>
    <string name="emailAddress_ClientProperty">Email Addrss</string>
    <string name="creditCard_ClientProperty">Credit Card</string>


    // Strings for CarModel:
    <string name="modelCode_CarModelProperty">modelCode</string>
    <string name="companyName_CarModelProperty">companyName</string>
    <string name="modelName_CarModelProperty">modelName</string>
    <string name="engineCapacity_CarModelProperty">engineCapacity</string>
    <string name="gearbox_CarModelProperty">gearbox</string>
    <string name="seats_CarModelProperty">seats</string>

    // Strings for Car:
    <string name="branchNumber_CarProperty">branchNumber</string>
    <string name="carModelCode_CarProperty">carModelCode</string>
    <string name="kilometers_CarProperty">kilometers</string>
    <string name="carNumber_CarProperty">carNumber</string>


    // Strings for add Files
    <string name="addButton">add</string>

    // Strings for update files:
    <string name="updateButton">update</string>


</resources>
