<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.user.project_java_5778.controller.ClientProperty">

    <EditText
        android:id="@+id/fristName_editText_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="77dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstName_ClientProperty"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/clients"
        android:layout_toEndOf="@+id/clients" />

    <EditText
        android:id="@+id/lastName_editText_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastName_ClientProperty"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/clients"
        android:layout_toEndOf="@+id/clients" />


    <EditText
        android:id="@+id/phoneNumber_editText_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/phoneNumber_ClientProperty"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/clients"
        android:layout_toEndOf="@+id/clients" />

    <EditText
        android:id="@+id/emailAddress_editText_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/emailAddress_ClientProperty"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/clients"
        android:layout_toEndOf="@+id/clients" />

    <EditText
        android:id="@+id/creditCard_editText_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/creditCard_ClientProperty"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/clients"
        android:layout_toEndOf="@+id/clients" />


    <Button
        android:id="@+id/addButton_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/updateButton"/>


</LinearLayout>
