<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.user.project_java_5778.controller.CarModel.AddCarModel">


    <EditText
        android:id="@+id/companyName_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="77dp"
        android:layout_toEndOf="@+id/carModels"
        android:layout_toRightOf="@+id/carModels"
        android:ems="10"
        android:hint="@string/companyName_CarModelProperty"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/modelName_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/carModels"
        android:layout_toRightOf="@+id/carModels"
        android:ems="10"
        android:hint="@string/modelName_CarModelProperty"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/engineCapacity_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/carModels"
        android:layout_toRightOf="@+id/carModels"
        android:ems="10"
        android:hint="@string/engineCapacity_CarModelProperty"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/gearbox_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/carModels"
        android:layout_toRightOf="@+id/carModels"
        android:ems="10"
        android:hint="@string/gearbox_CarModelProperty"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/seats_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/carModels"
        android:layout_toRightOf="@+id/carModels"
        android:ems="10"
        android:hint="@string/seats_CarModelProperty"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/addButton_carModel_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/addButton" />


</LinearLayout>
