<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.user.project_java_5778.controller.Car.AddCar">

    <EditText
        android:id="@+id/branchNumber_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="77dp"
        android:layout_toEndOf="@+id/cars"
        android:layout_toRightOf="@+id/cars"
        android:ems="10"
        android:hint="@string/branchNumber_CarProperty"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/carModelCode_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/cars"
        android:layout_toRightOf="@+id/cars"
        android:ems="10"
        android:hint="@string/carModelCode_CarProperty"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/kilometers_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/cars"
        android:layout_toRightOf="@+id/cars"
        android:ems="10"
        android:hint="@string/kilometers_CarProperty"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/carNumber_editText_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/cars"
        android:layout_toRightOf="@+id/cars"
        android:ems="10"
        android:hint="@string/carNumber_CarProperty"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/addButton_car_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/addButton" />


</LinearLayout>